--- a/convenience.html
+++ b/convenience.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convenience</title>
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" href="images/icon.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -36,7 +36,7 @@
    </nav>
 
    <section class="hero-container">
-        <img class="heroimg" src="images/Convenience.png" alt="image of house">
+        <img class="heroimg" src="images/Convenience.jpg" alt="image of house">
         <h1 class="herotxt" id="not-home">The Convenience...</h1>
     </section>
 
@@ -51,7 +51,7 @@
             </section>
 
             <section class="conv-cont-rt">
-                <img src="images/CLOCK.png" alt="clock">
+                <img src="images/CLOCK.jpg" alt="clock">
                 <article>
                     
                     <h2>Details</h2>
@@ -81,19 +81,19 @@
 
         <section class="h-gallery-c-c">
             <section class="h-gallery-c">
-                <img src="images/stove.png" alt="stove">
-                <img src="images/voice-sched.png" alt="schedule">
-                <img src="images/weather-box.png" alt="weather box">
-                <img src="images/garage.png" alt="garage">
-                <img src="images/tables.png" alt="tables outside">
-                <img src="images/bed.png" alt="bed warmer">
-                <img src="images/bath.png" alt="bath">
-                <img src="images/sprinkler.png" alt="sprinkler">
-                <img src="images/stove2.png" alt="stove">
-                <img src="images/garage2.png" alt="garage">
-                <img src="images/schedule-speakerbar.png" alt="schedule">
-                <img src="images/bed2.png" alt="bed">
-                <img src="images/sprinkler2.png" alt="sprinkler">
+                <img src="images/stove.jpg" alt="stove">
+                <img src="images/voice-sched.jpg" alt="schedule">
+                <img src="images/weather-box.jpg" alt="weather box">
+                <img src="images/garage.jpg" alt="garage">
+                <img src="images/tables.jpg" alt="tables outside">
+                <img src="images/bed.jpg" alt="bed warmer">
+                <img src="images/bath.jpg" alt="bath">
+                <img src="images/sprinkler.jpg" alt="sprinkler">
+                <img src="images/stove2.jpg" alt="stove">
+                <img src="images/garage2.jpg" alt="garage">
+                <img src="images/schedule-speakerbar.jpg" alt="schedule">
+                <img src="images/bed2.jpg" alt="bed">
+                <img src="images/sprinkler2.jpg" alt="sprinkler">
             </section>
         </section>
     </main>
