--- a/enrichment.html
+++ b/enrichment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enrichment</title>
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" href="images/icon.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -36,16 +36,16 @@
    </nav>
    <main class="main-enri">
     <section class="hero-container">
-        <img class="heroimg" src="images/banner.png" alt="image of study">
+        <img class="heroimg" src="images/banner.jpg" alt="image of study">
         <h1 class="herotxt" id="not-home">The Enrichment...</h1>
     </section>
     <div class="enri-c-tee">
         <section class="c1-imgs sideimgs" >
-            <img src="images/chair-rahh.png" alt="image of chair">
-            <img src="images/jukebox.png" alt="image of jukebox">
+            <img src="images/chair-rahh.jpg" alt="image of chair">
+            <img src="images/jukebox.jpg" alt="image of jukebox">
         </section>
         <section class="enri-card1">
-            <img src="images/study.png" alt="image of study">
+            <img src="images/study.jpg" alt="image of study">
             <article>
                 <h2>Refined Comfort in the study</h2>
                 <p>Transform your study into a haven of relaxation and inspiration with our smart home's luxurious features. Bask in the warm glow of the elegant fireplace, which creates a cozy, inviting atmosphere.  Enhance your intellectual environment with a poetry reader that brings beautiful verses to life, while a carefully curated selection of music sets the perfect tone for both focus and relaxation. Sink into our ergonomically designed chairs, combining style with ultimate comfort to keep you productive and at ease. With these thoughtful features, your study becomes an ideal retreat for creativity and contemplation.</p>
@@ -60,11 +60,11 @@
                 <p>Create a serene and stimulating space for your little one with our smart home’s nursery features. Enjoy the modern touch of glass walls that provide an open, airy feel while ensuring safety and comfort. Engage your child with interactive media that entertains and educates, and delight their senses with carefully crafted artificial smells and sounds that create a soothing, sensory-rich environment. These elements come together to foster a nurturing atmosphere where your child can grow and thrive in a beautifully designed space.</p>
                 <a href="#" class="pricing">Pricing</a>
             </article>
-            <img src="images/nursery.png" alt="image of nursery">
+            <img src="images/nursery.jpg" alt="image of nursery">
         </section>
         <section class="c2-imgs sideimgs">
-            <img src="images/kid.png" alt="kid playing in room">
-            <img src="images/duhhhhhh.png" alt="nursery room">
+            <img src="images/kid.jpg" alt="kid playing in room">
+            <img src="images/duhhhhhh.jpg" alt="nursery room">
         </section>
     </section>
    </main>
