--- a/technology.html
+++ b/technology.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technology</title>
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" href="images/icon.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
 
     <main class="tech-main">
         <section class="hero-container">
-            <img class="heroimg" src="images/technologypic.png" alt="image of dishwasher">
+            <img class="heroimg" src="images/technologypic.jpg" alt="image of dishwasher">
             <h1 class="herotxt" id="not-home">The Technology...</h1>
         </section>
 
@@ -85,23 +85,23 @@
                 </section>
             </article>
             
-            <img src="images/dishwasher.png" alt="DISHWASHER">
+            <img src="images/dishwasher.jpg" alt="DISHWASHER">
         </section>
         <!-- Slidey thing -->
         <section class="h-gallery-c-c" id="c-and-tech">
             <section class="h-gallery-c">
-                <img src="images/tech/brain.png" alt="brain">
-                <img src="images/tech/curtains.png" alt="curtains">
-                <img src="images/tech/dishwasheraa.png" alt="dishwasher">
-                <img src="images/tech/door.png" alt="door">
-                <img src="images/tech/incinerator.png" alt="incinerator">
-                <img src="images/tech/memorytape.png" alt="memory tape">
-                <img src="images/tech/petthing.png" alt="dog at front door">
-                <img src="images/tech/roborat.png" alt="robot rat">
-                <img src="images/tech/shudders.png" alt="shutters on door">
-                <img src="images/tech/themice.png" alt="robot mice">
-                <img src="images/tech/doooor.png" alt="front door">
-                <img src="images/tech/cortainss.png" alt="curtains">
+                <img src="images/tech/brain.jpg" alt="brain">
+                <img src="images/tech/curtains.jpg" alt="curtains">
+                <img src="images/tech/dishwasheraa.jpg" alt="dishwasher">
+                <img src="images/tech/door.jpg" alt="door">
+                <img src="images/tech/incinerator.jpg" alt="incinerator">
+                <img src="images/tech/memorytape.jpg" alt="memory tape">
+                <img src="images/tech/petthing.jpg" alt="dog at front door">
+                <img src="images/tech/roborat.jpg" alt="robot rat">
+                <img src="images/tech/shudders.jpg" alt="shutters on door">
+                <img src="images/tech/themice.jpg" alt="robot mice">
+                <img src="images/tech/doooor.jpg" alt="front door">
+                <img src="images/tech/cortainss.jpg" alt="curtains">
             </section>
         </section>
     </main>
