--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" href="images/icon.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -37,7 +37,7 @@
        <!-- Nav Boxes -->
    </nav>
    <section class="hero-container">
-        <img class="heroimg" src="images/shadowhouse.png" alt="image of house">
+        <img class="heroimg" src="images/shadowhouse.jpg" alt="image of house">
         <form class="searchbar" role="search">
             <input type="search" placeholder="State, City, Zip, Address..." class="searchbar-input">
         </form>
@@ -46,7 +46,7 @@
    <main>
         <section class="card-container">
             <section class="card" id="card1">
-                <img src="images/mouseshadow.png" alt="image of a robot rat taking out trash">
+                <img src="images/mouseshadow.jpg" alt="image of a robot rat taking out trash">
                 <article class="card-content">
                     <section class="card-text">
                         <h1>CLEANING AND TECHNOLOGY</h1>
@@ -56,7 +56,7 @@
                 </article>
             </section>
             <section class="card" id="card2">
-                <img src="images/clockwall.png" alt="image of a clock on the wall">
+                <img src="images/clockwall.jpg" alt="image of a clock on the wall">
                 <article class="card-content">
                     <section class="card-text">
                         <h1>CONVENIENCE</h1>
@@ -66,7 +66,7 @@
                 </article>
             </section>
             <section class="card" id="card3" >
-                <img src="images/enrichment.png " alt="image of the study of a house">
+                <img src="images/enrichment.jpg " alt="image of the study of a house">
                 <article class="card-content">
                     <section>
                         <h1>SAFETY AND</h1>
